Add env vars as secrets

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,9 @@
 name: Test
 
+env:
+  HYPELLM_API_KEY: ${{ secrets.HYPELLM_API_KEY }}
+  HYPELLM_MODEL: ${{ secrets.HYPELLM_MODEL }}
+
 on:
   push:
     branches: [main]
